kube/base/saleor-dashboard/saleor-dashboard-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saleor-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saleor-dashboard
  template:
    metadata:
        labels:
          app: saleor-dashboard
    spec:
      restartPolicy: Always
      containers:
        - name: saleor-dashboard
          image: k3d-higiliqs.local:12345/saleor-dashboard:3.20.34
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "10m"
              memory: "128M"
            limits:
              cpu: "1000m"
              memory: "512M"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 90
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            timeoutSeconds: 10
          ports:
            - name: saleor-dsh
              protocol: TCP
              containerPort: 80
