kube/base/saleor-dashboard/saleor-dashboard-svc.yml
kind: Service
apiVersion: v1
metadata:
  name:  saleor-dashboard
spec:
  selector:
    app:  saleor-dashboard
  type: NodePort
  ports:
  - name: saleor-dsh
    port: 9000
    targetPort: saleor-dsh
