kube/base/saleor-dashboard/saleor-dashboard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: dash.higiliquidos.deti.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: saleor-dashboard
                port:
                  number: 80
